objects/Key_Stakeholders__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Stakeholders (Business Account)</relationshipLabel>
        <relationshipName>Key_Stakeholders_Business_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>contains</operation>
                <value>Manual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Key Stakeholders</relationshipLabel>
        <relationshipName>Key_Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Stakeholders (Customer Account)</relationshipLabel>
        <relationshipName>Key_Stakeholders_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_BU_Name__c</fullName>
        <formula>IF(ISBLANK(Business_Unit_Account__c), HYPERLINK("/"+ Customer_Account__c , Customer_Account__r.Name, '_self'), HYPERLINK("/"+ Business_Unit_Account__c, Business_Unit_Account__r.Name, '_self'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer/BU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <label>Functional Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global CIO</fullName>
                </value>
                <value>
                    <fullName>Cisco Sponsor</fullName>
                </value>
                <value>
                    <fullName>Head of Architecture</fullName>
                </value>
                <value>
                    <fullName>Head of Engineering</fullName>
                </value>
                <value>
                    <fullName>Head of Operations</fullName>
                </value>
                <value>
                    <fullName>Head of DevOps</fullName>
                </value>
                <value>
                    <fullName>Head of Apps</fullName>
                </value>
                <value>
                    <fullName>Success Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Consultant/Contractor</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Finance/Accounting/Legal</fullName>
                </value>
                <value>
                    <fullName>HR/Recruitment</fullName>
                </value>
                <value>
                    <fullName>Journalism</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing/PR/Advertising</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Applications Dev</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Data Center</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Operations</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Security</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Storage</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Telecom</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
                <value>
                    <fullName>Operations/Administration</fullName>
                </value>
                <value>
                    <fullName>Operations/Administration - Security</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Purchasing/Procurement</fullName>
                </value>
                <value>
                    <fullName>Research/Development</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Telephone Management</fullName>
                </value>
                <value>
                    <fullName>Training/Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Driver__c</fullName>
        <label>Primary Business Driver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>C360 Checkbox use by Marketing Cloud</description>
        <inlineHelpText>Checking this box will start the digital journey for this key stakeholder.</inlineHelpText>
        <label>Primary Use Case Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Plan</label>
        <referenceTo>Success_Plan__c</referenceTo>
        <relationshipLabel>Key Stakeholders</relationshipLabel>
        <relationshipName>Key_Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Key Stakeholders</label>
    <nameField>
        <label>Key Stakeholder</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Primary_Business_Driver__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Name_is_not_editable</fullName>
        <active>true</active>
        <errorConditionFormula>( Name  != PRIORVALUE( Name ))</errorConditionFormula>
        <errorMessage>Key Stakeholder's Name is not editable</errorMessage>
    </validationRules>
</CustomObject>